0027643: Coding rules - eliminate GCC warning -Wmaybe-uninitialized