src/GeomFill/GeomFill_SectionPlacement.cxx
@@ -412,7 +412,7 @@ void GeomFill_SectionPlacement::Perform(const Handle(Adaptor3d_HCurve)& Path,
       PathParam = Path->FirstParameter();
       SecParam =  myAdpSection.FirstParameter();
       
-      Standard_Real distaux, taux, alpha;
+      Standard_Real distaux, taux = 0.0, alpha;
       gp_Pnt PonPath, PonSec, P;
       gp_Vec VRef, dp1;
       VRef.SetXYZ(TheAxe.Direction().XYZ());
